# finance-stuff

./: .gitignore  CLAUDE.md  README.md  log.txt  nb_builder.py  pyproject.toml  run_log__test_by_user.txt
.claude/: settings.local.json
course/: COURSE_OUTLINE.md  curriculum_state.md
course/guides/: blueprint_spec.md  brief_audit_spec.md  cell_design.md  code_verification.md  common.md  consolidation_spec.md  data.md  expectations_spec.md  file_agent_guide.md  flag_resolution.md  notebook.md  observation_review.md  orchestrator.md  research.md  rigor.md  task_design.md
course/research/: COURSE_RESTRUCTURE_REQUIREMENTS.md  OUTLINE_SPEC.md  RESEARCH_SYNTHESIS.md
course/shared/: API.md  STYLE.md  __init__.py  backtesting.py  causal.py  data.py  derivatives.py  dl_training.py  evaluation.py  generate_api.py  kaggle_gpu_runner.py  metrics.py  microstructure.py  nlp.py  portfolio.py  regime.py  rl_env.py  temporal.py
course/week01_markets_data/: README.md  hw.ipynb  lecture.ipynb  research_notes.md  seminar.ipynb
course/week02_time_series_volatility/: README.md  hw.ipynb  lecture.ipynb  research_notes.md  seminar.ipynb
course/week03_factor_models/: blueprint.md  brief_audit.md  execution_log.md  expectations.md  hw.ipynb  lecture.ipynb  narrative_brief.md  observations.md  research_notes.md  run_log.txt  seminar.ipynb
course/week04_ml_alpha/: blueprint.md  brief_audit.md  code_plan.md  execution_log.md  expectations.md  hw.ipynb  lecture.ipynb  narrative_brief.md  observations.md  orchestration.md  research_notes.md  run_log.txt  seminar.ipynb
course/week05_backtesting_txcosts/: _build_lecture.md  blueprint.md  brief_audit.md  code_plan.md  execution_log.md  expectations.md  (+8 more)
legacy/: COURSE_DEPENDENCIES.md  COURSE_PLAN.md  ML_Quant_Finance_Course_Research.md  ML_in_Quantitative_Finance_Research.md  PIPELINE_REDESIGN.md  QUALITY_AUDIT_W1_W4.md  quant_finance_skill_map_2025_2026__from_gpt_research.md
(+177 files in other folders)
